<resources>
    <string name="app_name" translatable="true">Mudanzas "D'Boy"</string>
    <string name="txtuser" translatable="true">User Name</string>
    <string name="txtpass" translatable="true">Password</string>
    <string name="txtfor" translatable="true">¿Olvidó su  contraseña?</string>
    <string name="chkre" translatable="true">Recuerdame</string>
    <string name="txtclic" translatable="true">Click here</string>
    <string name="btnlog" translatable="true">Iniciar Sesión</string>
    <string name="btncre" translatable="true">Crear una cuenta</string>
    <string name="image" translatable="true">UserLogin</string>
    <string name="facebook" translatable="true">Facebook</string>
    <string name="instagram" translatable="true">Instagram</string>
    <string name="github" translatable="true">GitHub</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Danny Boy</string>
    <string name="nav_header_subtitle">dannyboy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cliente">Cliente</string>
    <string name="inicio">Inicio</string>
    <string name="empleados">Empleados</string>
    <string name="solicitud">Solicitud</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="servicios">Servicios</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="welcome">Bienvenido al Sistema de Mudanzas</string>
    <string name="create">Registrar un nuevo Trabajador </string>
    <string name="about">¿Quienes Somos?</string>
    <string name="repeat">Repita la contraseña</string>
    <string name="pass">Contraseña</string>
    <string name="mail">Email o celular</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="create_user">Crear usuario</string>
    <string name="add">Agregar Trabajadores</string>
    <string name="add_picture">Agregar foto de perfil</string>
    <string name="message">Send Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="girl_muding">girl_muding</string>
    <string name="lorem">Somos una empresa familiar que comenzó sus actividades hace muchos años atrás, gracias al trabajo responsable y honesto nos hemos mantenido en el mercado a lo largo de todos estos años.</string>
    <string name="about_two">Contamos con personal altamente capacitado para todo tipo de traslados de corta y larga distancia. Ofrecemos un servicio completo, con precios accesibles para todos los clientes que nos eligen, con la seguridad que usted y sus enseres se merecen.</string>
    <string name="direc">¿Donde Encontrarnos?</string>
    <string name="ubicanos">Ubicanos</string>
    <string name="map">Maps</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="foot">® All rights reserved - Designed by Danny Boy S.A</string>
    <string name="add_customer">Agrega un cliente Nuevo</string>
    <string name="dni">DNI</string>
    <string name="a_pat">Apellido Paterno</string>
    <string name="a_mat">Apellido Materno</string>
    <string name="telefono">Telefono</string>
    <string name="add_cliente">Agregar Cliente</string>
    <string name="add_c">Search Customer</string>
    <string name="ubica">Mi direccion es: \n</string>
    <string name="add_service">Añadir nuevos Servicios</string>
    <string name="name_service">¿Como se llamara el nuevo servicio?</string>
    <string name="aaa">aaa</string>
    <string name="nosepo">Seleccione un Item</string>
</resources>