<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/inicio"
            android:icon="@drawable/home_60px"
            android:checked="true"/>
        <item android:id="@+id/cliente"
            android:title="@string/cliente"
            android:icon="@drawable/customer_128px"/>
        <item android:id="@+id/empleados"
            android:title="@string/empleados"
            android:icon="@drawable/worker_52px"/>
        <item android:id="@+id/servicios"
            android:title="@string/servicios"
            android:icon="@drawable/service_100px"/>
        <item android:id="@+id/solicitud"
            android:title="@string/solicitud"
            android:icon="@drawable/ic_post_add_24"/>
        <item android:id="@+id/vehiculos"
            android:title="@string/vehiculos"
            android:icon="@drawable/ic_car_24"/>
    </group>
    <group android:id="@+id/xd"
        android:checkableBehavior="single">
        <item android:id="@+id/salir"
            android:title="@string/salir"
            android:icon="@drawable/enter"/>
    </group>


</menu>